trying new recipe builder. probably should have a branch

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     {% if current_user.is_authenticated %}
         <a href="{{url_for('profile')}}">Profile</a>        
         <a href="{{url_for('recipeBuilder')}}">Recipe Builder</a>        
+        <a href="{{url_for('altbuilder')}}">Alternate Builder</a>        
         <a href="{{url_for('logout')}}">Logout</a>
     {% else %}
         <a href="{{url_for('login')}}">Login</a>
